--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<span class="image main"><img src="images/family.jpg" alt="" /></span>
+								<p>Being the first generation Asian American of my family and the first to graduate from college, I feel obligated to be successful for past and future generations. Originally graduating from San Francisco State with a bachelor's degree in Film, I soon realized trying to be successful in that industry would be a questionable road. Since I emphasized in video editing, I wanted to pursue a new career that dealt with using computers. Forming a passion for Software Engineering was easy, because possibly getting a job in a growing industry such as tech is an opportunity of a life time for someone like me. Once I learned that code is supposed to be clean for the human eye, but can be disastrous if not done right. I wanted my code to be like the quality of my edits or shots in films, clear, elegant, and well thought out.</p>
 							</article>
 
 						<!-- Contact -->
