Add S3 and Feline Fix project links to portfolio

--- a/index.html
+++ b/index.html
@@ -54,10 +54,22 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
+								<h4 class="center-text">S3 - Spotify Song Selector</h4>
+
+								<span class="image main">
+									<a href="https://spotifysongselector.herokuapp.com/" target="_blank"><img src="images/S3.png" alt="" /></a>
+								</span>
+
 								<h4 class="center-text">Flappy BlueJay (Flappy Bird Clone)</h4>
 
 								<span class="image main">
 									<a href="https://brianiswinston.github.io/" target="_blank"><img src="images/FlappyBlueJay.png" alt="" /></a>
+								</span>
+
+								<h4 class="center-text">FelineFix (Instagram Clone)</h4>
+
+								<span class="image main">
+									<a href="https://felinefix.herokuapp.com/#/" target="_blank"><img src="images/FelineFix.png" alt="" /></a>
 								</span>
 							</article>
 
