Add images for languages

--- a/index.html
+++ b/index.html
@@ -78,6 +78,22 @@
 								<h2 class="major">About</h2>
 								<h4 class="center-text-video">My Journey in to Tech Life - Weekly Vlog</h4>
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/Ivjd0kC9o8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								<h4 class="center-text-video">Languages</h4>
+
+								<h6 class="languages">Frontend</h6>
+								<img src="images/Javascript-shield.png" alt="" height="60" width="52">
+								<img src="images/html.png" alt="" height="60" width="52">
+								<img src="images/css.png" alt="" height="60" width="52">
+								<img src="images/redux.png" alt="" height="60" width="52">
+								<img src="images/react-hexagon.png" alt="" height="60" width="52">
+								<img src="images/jquery.png" alt="" height="60" width="52">
+
+								<h6 class="languages">Backend</h6>
+								<img src="images/Ruby.png" alt="" height="60" width="52">
+								<img src="images/rails.jpeg" alt="" height="52" width="52">
+
+								<h6 class="languages">Backend</h6>
+								<img src="images/postgres.png" alt="" height="52" width="52">
 							</article>
 
 						<!-- Contact -->
