Change database to dbms

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								<img src="images/Ruby.png" alt="" height="60" width="52">
 								<img src="images/rails.jpeg" alt="" height="52" width="52">
 
-								<h6 class="languages">Database</h6>
+								<h6 class="languages">DBMS</h6>
 								<img src="images/postgres.png" alt="" height="52" width="52">
 							</article>
 
