Change margin arguments for images

--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
 								<h4 class="center-text-video">Languages</h4>
 
 								<h6 class="languages">Frontend</h6>
-								<img src="images/Javascript-shield.png" alt="" height="60" width="52">
-								<img src="images/html.png" alt="" height="60" width="52">
-								<img src="images/css.png" alt="" height="60" width="52">
-								<img src="images/redux.png" alt="" height="60" width="52">
-								<img src="images/react-hexagon.png" alt="" height="60" width="52">
-								<img src="images/jquery.png" alt="" height="60" width="52">
+								<img class="imgs" src="images/Javascript-shield.png" alt="" height="60" width="52">
+								<img class="imgs" src="images/html.png" alt="" height="60" width="52">
+								<img class="imgs" src="images/css.png" alt="" height="60" width="52">
+								<img class="imgs" src="images/redux.png" alt="" height="60" width="52">
+								<img class="imgs" src="images/react-hexagon.png" alt="" height="60" width="52">
+								<img class="imgs" src="images/jquery.png" alt="" height="60" width="52">
 
 								<h6 class="languages">Backend</h6>
-								<img src="images/Ruby.png" alt="" height="60" width="52">
-								<img src="images/rails.jpeg" alt="" height="52" width="52">
+								<img class="imgs" src="images/Ruby.png" alt="" height="60" width="52">
+								<img class="imgs" src="images/rails.jpeg" alt="" height="52" width="52">
 
 								<h6 class="languages">DBMS</h6>
-								<img src="images/postgres.png" alt="" height="52" width="52">
+								<img class="imgs" src="images/postgres.png" alt="" height="52" width="52">
 							</article>
 
 						<!-- Contact -->
