Add links to contact icons

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<h4 class="center-text-video">My Journey in to Tech Life - Weekly Vlog</h4>
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/Ivjd0kC9o8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								<div class="videoWrapper">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/Ivjd0kC9o8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								</div>
 								<h4 class="center-text-video">Languages</h4>
 
 								<h6 class="languages">Frontend</h6>
@@ -120,10 +122,12 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.youtube.com/channel/UCI6i2KM7XBZct1CmtZtUC5A?view_as=subscriber" class="icon fa-youtube-play" target="_blank"><span class="label">YouTube</span></a></li>
+									<li><a href="https://github.com/BrianisWinston" class="icon fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/winston-galas-96ab3ba3/" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.facebook.com/brianiswinston" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/winstonisbrian/?hl=en" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+									<li><a href="https://twitter.com/brianiswinston?lang=en" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 								</ul>
 							</article>
 
